# LapWing

./: .gitignore  1  =0.5.0  AGENTS.md  CLAUDE.md  CODEX.md  HANDOVER_CLAUDE_TO_CODEX_2026-03-25.md  HEALTH_CHECK_REPORT.md  Lapwing_角色设定书.md  Lapwing_项目状况_20260416.md  PROJECT_PLAN_STATUS_2026-03-26.md  README.md  TASKS.md  TASKS_execution_fix.md  agent_team_test_report.md  browser.md  cleanup_report_step1.md  cleanup_report_step2.md  config.example.toml  config.toml  conversation_export.md  exe.md  execute_tool_body.py  fix_report.md  get_resolved.py  gpt.md  health_report.md  main.py  plan.md  preflight_report.md  pytest.ini  remove_methods.py  remove_methods2.py  replace_execute_tool.py  replace_safely.py  requirements.txt  rewrite.py  scratch_pad.md  screenshot_login.py  test_lapwing.txt  (+2 more)
config/: .env.example  .env.test  settings.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop-v2/: package-lock.json  package.json  vite.config.ts
desktop-v2/src-tauri/: Cargo.toml  tauri.conf.json
desktop-v2/src-tauri/src/: autostart.rs  commands.rs  hotkey.rs  lib.rs  main.rs  tray.rs
desktop-v2/src-tauri/src/sensing/: aggregator.rs  clipboard.rs  db.rs  file_watcher.rs  mod.rs  process_detector.rs  session_events.rs  window_monitor.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: adapter_contract.md  capability_acceptance_index.md  capability_agent_phase6a_impact_map.md  capability_consolidation_acceptance.md  capability_evolution_architecture.md  capability_known_failures.md  capability_lifecycle_state_model.md  capability_maintenance_health.md  (+75 more)
(+1132 files in other folders)
