[package]
name = "desktop-v2"
version = "0.1.0"
description = "Lapwing Desktop"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
chrono = "0.4"
parking_lot = "0.12"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_DataExchange",
  "Win32_System_RemoteDesktop",
  "Win32_Storage_FileSystem",
  "Win32_Security",
] }
