[package]
name = "lapwing-desktop"
version = "0.1.0"
description = "Lapwing desktop console"
authors = ["Lapwing"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = ["notification-all", "window-all"] }
